refactoring of domain